--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -38,7 +38,7 @@ jobs:
         IMAGE_FRONTEND_TAG: frontend_image  
         IMAGE_BACKEND_TAG: backend_image
       run: |
-        docker build . --file /frontend/Dockerfile.prod --tag $IMAGE_FRONTEND_TAG
-        docker build . --file /backend/Dockerfile.prod --tag $IMAGE_BACKEND_TAG
+        docker build . --file ./frontend/Dockerfile.prod --tag $IMAGE_FRONTEND_TAG
+        docker build . --file ./backend/Dockerfile.prod --tag $IMAGE_BACKEND_TAG
         docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_FRONTEND_TAG
         docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_BACKEND_TAG
