--- a/frontend/Dockerfile.prod
+++ b/frontend/Dockerfile.prod
@@ -12,5 +12,7 @@ RUN npm run build
 # Step two: Production
 FROM nginx:stable-alpine3.17 as production-stage
 COPY --from=build-stage /app/build /usr/share/nginx/html
+# Redirect all routes to index.html. Fixing refresh error in the application.
+RUN sed -i '/index  index.html index.htm;$/a try_files $uri $uri/ /index.html;' /etc/nginx/conf.d/default.conf
 EXPOSE 80
 ENTRYPOINT [ "nginx", "-g", "daemon off;" ]
